# Philosophers

./: CMakeLists.txt  a.out  test
philo_one/: Makefile  main.c  philo_one  test
philo_one/includes/: philo.h
philo_one/src/: atoi.c  ft_putnbr.c  init_and_threads.c  itoa.c  philo_simulation.c  philo_utils.c  utils.c
philo_three/: Makefile  main.c  philo_three
philo_three/includes/: philo.h
philo_three/src/: atoi.c  init_and_processes.c  philo_simulation.c  philo_utils.c  process_utils.c
philo_two/: main.c  philo_two
philo_two/includes/: philo.h
philo_two/src/: init_and_threads.c  philo_simulation.c  philo_utils.c
